[package]
name    = "tshark_wrapper"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash     = "0.8.11"
chrono    = "0.4.39"
clap      = { version = "4.5.27", features = ["derive"] }
regex     = "1.11.1"
tokio     = { version = "1.43.0", features = ["full"] }
glob      = "0.3.1"
hex       = "0.4.3"
itertools = "0.13"
